# jupyter-archimedes

./: LICENSE  Makefile  README.md  dune-project  jupyter-archimedes.opam
.github/workflows/: ci.yaml  release.yaml
notebooks/: simple_timeseries.ipynb
src/: dune
tests/: notebook.ipynb
