(library
 (name        jupyter_archimedes)
 (public_name jupyter-archimedes)
 (synopsis    "Jupyter backend for Archimedes")
 (modes       byte)
 (modules     Jupyter_archimedes)
 (flags       (-w A-4-31-33-34-39-41-42-43-44-45-48-49-50-58-66
               -safe-string -strict-sequence -strict-formats
               -short-paths))
 (libraries   jupyter.notebook
              archimedes.cairo))
